# auto-versioning

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: auto-version.yml  stress-test-versioning.yml
auto_versioning/: __init__.py  setup_tool.py
scripts/: stress_test_versioning.py  version_manager.py
